fixed div classes for -waar en wanneer-  not showing up in devtools by renaming classes in css

--- a/Frontend/src/pages/countdown/Countdown.module.css
+++ b/Frontend/src/pages/countdown/Countdown.module.css
@@ -560,8 +560,8 @@
 		}
 	}
 
-	.leftInfoSide,
-	.rightInfoSide {
+	.leftSideInfo,
+	.rightSideInfo {
 		width: 40%;
 	}
 
